Fixes some stuff but always INSTABLE
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1525 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -1007,7 +1007,6 @@ eng:
         updater: 'Updater'
         updater_id: 'Updater'
       journal_record:
-        #>always_draft: '(((ALWAYS_DRAFT)))'
         #>closed: 'Fermé'
         company: 'Company'
         company_id: 'Company'
@@ -1022,7 +1021,8 @@ eng:
         #>currency_id: 'Devise'
         #>currency_rate: 'Taux de change'
         #>debit: 'Débit'
-        #>draft: '(((DRAFT)))'
+        #>draft: 'Brouillard'
+        #>draft_mode: 'Mode brouillard'
         #>entries: 'Écritures'
         #>financialyear: 'Exercices'
         id: 'ID'
@@ -1427,11 +1427,9 @@ eng:
         updater_id: 'Updater'
         #>users: 'Utilisateurs'
       purchase_order:
-        #>accounted: 'Comptabilisé(e)'
         #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant HT'
         #>amount_with_taxes: 'Montant TTC'
-        #>client_id: 'Fournisseur'
         comment: 'Comment'
         company: 'Company'
         company_id: 'Company'
@@ -1443,13 +1441,13 @@ eng:
         #>dest_contact: 'Adresse de livraison'
         #>dest_contact_id: 'Adresse de livraison'
         id: 'ID'
-        #>invoiced: 'Facturé'
         #>label: 'Commande'
         #>lines: 'Lignes d''achat'
         lock_version: 'Version'
         #>moved_on: 'Reçu le'
         #>number: 'Numéro'
-        #>payee: '(((PAYEE)))'
+        #>parts_amount: 'Montant utilisé'
+        #>payee: 'Bénéficiaire'
         #>payment_parts: 'Parties de réglement'
         #>planned_on: 'Réception prévue le'
         quantity: 'Quantity'
@@ -1502,6 +1500,7 @@ eng:
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
         #>id: 'ID'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>mode: 'Mode de règlement'
@@ -1527,6 +1526,7 @@ eng:
         #>created_at: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
+        #>draft_mode: 'Mode brouillard'
         #>id: 'ID'
         #>lock_version: 'Version'
         #>name: 'Nom'
@@ -1693,8 +1693,9 @@ eng:
         name: 'Name'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
-        #>payment_mode_complement: '(((PAYMENT_MODE_COMPLEMENT)))'
-        #>payment_mode_id: '(((PAYMENT_MODE_ID)))'
+        #>payment_mode: 'Mode de règlement'
+        #>payment_mode_complement: 'Complément d''information sur le mode règlement'
+        #>payment_mode_id: 'Mode de règlement'
         #>payment_type: 'Type de paiement'
         #>sale_orders: 'Ventes'
         updated_at: 'Updated at'
@@ -1744,12 +1745,14 @@ eng:
         #>cash_id: 'Compte de trésorerie utilisé'
         #>commission_account: 'Compte à utiliser pour la commission'
         #>commission_account_id: 'Compte à utiliser pour la commission'
+        #>commission_amount: 'Montant fixe de la commission'
         #>commission_percent: 'Pourcentage de commission'
         company: 'Company'
         company_id: 'Company'
         created_at: 'Created at'
         creator: 'Creator'
         creator_id: 'Creator'
+        #>draft_mode: 'Mode brouillard'
         #>embankable_payments: 'Règlements encaissables'
         #>entities: 'Personnes'
         id: 'ID'
