--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -452,6 +452,7 @@ fra:
       tracking: 'N°Lot : {{serial}}'
     purchase_payment:
       label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} pour {{payee}}'
+      to_accountancy: '[{{number}}] {{detail}}'
     sale_order:
       label:
         estimate: 'Devis N°{{number}}'
