--- a/config/locales/jpn/activerecord.yml
+++ b/config/locales/jpn/activerecord.yml
@@ -1003,7 +1003,6 @@ jpn:
         updater: '修正の人'
         updater_id: '修正の人'
       journal_record:
-        #>always_draft: '(((ALWAYS_DRAFT)))'
         #>closed: 'Fermé'
         company: '会社'
         company_id: '会社'
@@ -1018,7 +1017,8 @@ jpn:
         #>currency_id: 'Devise'
         #>currency_rate: 'Taux de change'
         #>debit: 'Débit'
-        #>draft: '(((DRAFT)))'
+        #>draft: 'Brouillard'
+        #>draft_mode: 'Mode brouillard'
         #>entries: 'Écritures'
         #>financialyear: 'Exercices'
         id: '唯一の番号'
@@ -1423,11 +1423,9 @@ jpn:
         updater_id: '修正の人'
         #>users: 'Utilisateurs'
       purchase_order:
-        #>accounted: 'Comptabilisé(e)'
         #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant HT'
         #>amount_with_taxes: 'Montant TTC'
-        #>client_id: 'Fournisseur'
         comment: 'メモ'
         company: '会社'
         company_id: '会社'
@@ -1439,13 +1437,13 @@ jpn:
         #>dest_contact: 'Adresse de livraison'
         #>dest_contact_id: 'Adresse de livraison'
         id: '唯一の番号'
-        #>invoiced: 'Facturé'
         #>label: 'Commande'
         #>lines: 'Lignes d''achat'
         lock_version: '修正の番号'
         #>moved_on: 'Reçu le'
         number: '番号'
-        #>payee: '(((PAYEE)))'
+        #>parts_amount: 'Montant utilisé'
+        #>payee: 'Bénéficiaire'
         #>payment_parts: 'Parties de réglement'
         #>planned_on: 'Réception prévue le'
         #>quantity: 'Quantité'
@@ -1498,6 +1496,7 @@ jpn:
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
         #>id: 'ID'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>mode: 'Mode de règlement'
@@ -1523,6 +1522,7 @@ jpn:
         #>created_at: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
+        #>draft_mode: 'Mode brouillard'
         #>id: 'ID'
         #>lock_version: 'Version'
         #>name: 'Nom'
@@ -1689,8 +1689,9 @@ jpn:
         name: '名前'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
-        #>payment_mode_complement: '(((PAYMENT_MODE_COMPLEMENT)))'
-        #>payment_mode_id: '(((PAYMENT_MODE_ID)))'
+        #>payment_mode: 'Mode de règlement'
+        #>payment_mode_complement: 'Complément d''information sur le mode règlement'
+        #>payment_mode_id: 'Mode de règlement'
         #>payment_type: 'Type de paiement'
         #>sale_orders: 'Ventes'
         #>updated_at: 'Mis à jour le'
@@ -1740,12 +1741,14 @@ jpn:
         #>cash_id: 'Compte de trésorerie utilisé'
         #>commission_account: 'Compte à utiliser pour la commission'
         #>commission_account_id: 'Compte à utiliser pour la commission'
+        #>commission_amount: 'Montant fixe de la commission'
         #>commission_percent: 'Pourcentage de commission'
         company: '会社'
         company_id: '会社'
         #>created_at: 'Créé le'
         creator: '創始者'
         creator_id: '創始者'
+        #>draft_mode: 'Mode brouillard'
         #>embankable_payments: 'Règlements encaissables'
         #>entities: 'Personnes'
         id: '唯一の番号'
