--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -1001,7 +1001,6 @@ spa:
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
       journal_record:
-        #>always_draft: '(((ALWAYS_DRAFT)))'
         #>closed: 'Fermé'
         company: 'Compañía'
         company_id: 'Compañía'
@@ -1016,7 +1015,8 @@ spa:
         #>currency_id: 'Devise'
         #>currency_rate: 'Taux de change'
         #>debit: 'Débit'
-        #>draft: '(((DRAFT)))'
+        #>draft: 'Brouillard'
+        #>draft_mode: 'Mode brouillard'
         #>entries: 'Écritures'
         #>financialyear: 'Exercices'
         #>id: 'ID'
@@ -1421,11 +1421,9 @@ spa:
         #>updater_id: 'Modificateur'
         #>users: 'Utilisateurs'
       purchase_order:
-        #>accounted: 'Comptabilisé(e)'
         #>accounted_at: 'Comptabilisé(e) le'
         #>amount: 'Montant HT'
         #>amount_with_taxes: 'Montant TTC'
-        #>client_id: 'Fournisseur'
         #>comment: 'Commentaire'
         company: 'Compañía'
         company_id: 'Compañía'
@@ -1437,13 +1435,13 @@ spa:
         #>dest_contact: 'Adresse de livraison'
         #>dest_contact_id: 'Adresse de livraison'
         #>id: 'ID'
-        #>invoiced: 'Facturé'
         #>label: 'Commande'
         #>lines: 'Lignes d''achat'
         #>lock_version: 'Version'
         #>moved_on: 'Reçu le'
         #>number: 'Numéro'
-        #>payee: '(((PAYEE)))'
+        #>parts_amount: 'Montant utilisé'
+        #>payee: 'Bénéficiaire'
         #>payment_parts: 'Parties de réglement'
         #>planned_on: 'Réception prévue le'
         #>quantity: 'Quantité'
@@ -1496,6 +1494,7 @@ spa:
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
         #>id: 'ID'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>mode: 'Mode de règlement'
@@ -1521,6 +1520,7 @@ spa:
         #>created_at: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
+        #>draft_mode: 'Mode brouillard'
         #>id: 'ID'
         #>lock_version: 'Version'
         #>name: 'Nom'
@@ -1687,8 +1687,9 @@ spa:
         name: 'Nombre'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
-        #>payment_mode_complement: '(((PAYMENT_MODE_COMPLEMENT)))'
-        #>payment_mode_id: '(((PAYMENT_MODE_ID)))'
+        #>payment_mode: 'Mode de règlement'
+        #>payment_mode_complement: 'Complément d''information sur le mode règlement'
+        #>payment_mode_id: 'Mode de règlement'
         #>payment_type: 'Type de paiement'
         #>sale_orders: 'Ventes'
         #>updated_at: 'Mis à jour le'
@@ -1738,12 +1739,14 @@ spa:
         #>cash_id: 'Compte de trésorerie utilisé'
         #>commission_account: 'Compte à utiliser pour la commission'
         #>commission_account_id: 'Compte à utiliser pour la commission'
+        #>commission_amount: 'Montant fixe de la commission'
         #>commission_percent: 'Pourcentage de commission'
         company: 'Compañía'
         company_id: 'Compañía'
         #>created_at: 'Créé le'
         #>creator: 'Créateur'
         #>creator_id: 'Créateur'
+        #>draft_mode: 'Mode brouillard'
         #>embankable_payments: 'Règlements encaissables'
         #>entities: 'Personnes'
         #>id: 'ID'
