--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -357,7 +357,7 @@ fra:
         currency_credit: 'Crédit'
         currency_debit: 'Débit'
         debit: 'Débit'
-        entries: 'Écritures'
+        entries: 'Écritures' #?
         id: 'ID'
         journal_entries: 'Écritures'
         lock_version: 'Version'
@@ -1339,7 +1339,6 @@ fra:
 
       # Pièce comptable
       journal_record:
-        always_draft: (((ALWAYS_DRAFT)))
         closed: 'Fermé'
         company: 'Société'
         company_id: 'Société'
@@ -1354,7 +1353,8 @@ fra:
         currency_id: 'Devise'
         currency_rate: 'Taux de change'
         debit: 'Débit'
-        draft: (((DRAFT)))
+        draft: 'Brouillard'
+        draft_mode: 'Mode brouillard'
         entries: 'Écritures'
         financialyear: 'Exercices'
         id: 'ID'
@@ -1789,11 +1789,9 @@ fra:
 
       # Achat
       purchase_order:
-        accounted: 'Comptabilisé(e)' #?
         accounted_at: 'Comptabilisé(e) le'
         amount: 'Montant HT'
         amount_with_taxes: 'Montant TTC'
-        client_id: 'Fournisseur' #?
         comment: 'Commentaire'
         company: 'Société'
         company_id: 'Société'
@@ -1805,13 +1803,13 @@ fra:
         dest_contact: 'Adresse de livraison'
         dest_contact_id: 'Adresse de livraison'
         id: 'ID'
-        invoiced: 'Facturé' #?
         label: 'Commande'
         lines: 'Lignes d''achat'
         lock_version: 'Version'
         moved_on: 'Reçu le'
         number: 'Numéro'
-        payee: (((PAYEE)))
+        parts_amount: 'Montant utilisé'
+        payee: 'Bénéficiaire'
         payment_parts: 'Parties de réglement'
         planned_on: 'Réception prévue le'
         quantity: 'Quantité'
@@ -1868,6 +1866,7 @@ fra:
         creator: 'Créateur'
         creator_id: 'Créateur'
         id: 'ID'
+        journal_record: 'Pièce comptable'
         journal_record_id: 'Pièce comptable'
         lock_version: 'Version'
         mode: 'Mode de règlement'
@@ -1895,6 +1894,7 @@ fra:
         created_at: 'Créé le'
         creator: 'Créateur'
         creator_id: 'Créateur'
+        draft_mode: 'Mode brouillard'
         id: 'ID'
         lock_version: 'Version'
         name: 'Nom'
@@ -2071,8 +2071,9 @@ fra:
         name: 'Nom'
         payment_delay: 'Délai de paiement'
         payment_delay_id: 'Délai de paiement'
-        payment_mode_complement: (((PAYMENT_MODE_COMPLEMENT)))
-        payment_mode_id: (((PAYMENT_MODE_ID)))
+        payment_mode: 'Mode de règlement'
+        payment_mode_complement: 'Complément d''information sur le mode règlement'
+        payment_mode_id: 'Mode de règlement'
         payment_type: 'Type de paiement' #?
         sale_orders: 'Ventes'
         updated_at: 'Mis à jour le'
@@ -2126,12 +2127,14 @@ fra:
         cash_id: 'Compte de trésorerie utilisé'
         commission_account: 'Compte à utiliser pour la commission'
         commission_account_id: 'Compte à utiliser pour la commission'
+        commission_amount: 'Montant fixe de la commission'
         commission_percent: 'Pourcentage de commission'
         company: 'Société'
         company_id: 'Société'
         created_at: 'Créé le'
         creator: 'Créateur'
         creator_id: 'Créateur'
+        draft_mode: 'Mode brouillard'
         embankable_payments: 'Règlements encaissables'
         entities: 'Personnes'
         id: 'ID'
