--- a/config/locales/spa/pack.accountancy.yml
+++ b/config/locales/spa/pack.accountancy.yml
@@ -171,6 +171,9 @@ spa:
           #>zero: 'Aucune écriture'
         #>title: 'Comptabilité générale'
       journal:
+        #>balance: 'Soldes'
+        #>credit: 'Crédit'
+        #>debit: 'Débit'
         #>filter_entries_with: 'Filtrer les écritures avec'
         #>interval: 'Intervalle'
         #>journal_update: 'Modifier le journal'
@@ -178,6 +181,7 @@ spa:
         #>period: 'Période'
         #>search: 'Rechercher des pièces/écritures'
         #>title: '{{name}} ({{code}})'
+        #>totals: 'Totaux'
       journal_close:
         #>close: 'Clôturer le journal'
         #>select_closure_date: 'Choisissez la date de clôture'
@@ -200,11 +204,11 @@ spa:
         #>title: 'Déclôture du {{name}}'
       journal_update:
         #>title: 'Modifier le journal : {{name}}'
-      journals:
-        #>title: 'Journaux'
       _journals:
         #>journal_detail: 'Cloturé au {{closed_on}}'
         #>journal_name: '{{name}}'
+      journals:
+        #>title: 'Journaux'
       _journals_find:
         #>journal_id: 'Numéro de journal'
         #>journal_name: 'Nom du journal'
@@ -219,12 +223,12 @@ spa:
         #>dates: 'Saisissez les dates de début et de fin de la période'
         #>from: 'Période du'
         #>to: 'Au'
-      print_balance_sheet:
-        #>period: 'Période'
-        #>title: 'Impression du bilan'
       _print_balance_sheet:
         #>balance_sheet: 'Sélectionnez l''exercice'
         #>select_financialyear: 'Exercice'
+      print_balance_sheet:
+        #>period: 'Période'
+        #>title: 'Impression du bilan'
       print_by_financial_year:
         #>financial_id: 'Exercice comptable'
         #>financial_year_select: 'Sélectionnez l'' exercice comptable'
