Add to_accountancy in PurchaseOrder. Need to change/update accountancy/accountize
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1526 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -24,8 +24,8 @@ eng:
         #>number: 'Numéro'
         parent: 'Parent' #!
         parent_id: 'Parent' #!
-        #>payment_modes: 'Modes de réglement'
-        #>payments: 'Réglements'
+        #>payment_modes: 'Modes de règlement'
+        #>payments: 'Règlements'
         products: 'Products'
         #>purchase_order_lines: 'Lignes d''achat'
         updated_at: 'Updated at'
@@ -129,7 +129,7 @@ eng:
         #>nature: 'Nature'
         #>nature_label: 'Nature'
         #>number: 'Numéro de compte bancaire'
-        #>payment_modes: 'Modes de réglement'
+        #>payment_modes: 'Modes de règlement'
         updated_at: 'Updated at'
         updater: 'Updater'
         updater_id: 'Updater'
@@ -169,7 +169,7 @@ eng:
         #>districts: 'Zones administratives'
         #>document_templates: 'Modèles de document'
         #>documents: 'Documents'
-        #>embankable_payments: 'Réglements encaissables'
+        #>embankable_payments: 'Règlements encaissables'
         #>embankments: 'Encaissements'
         #>employees: 'employés'
         #>entities: 'Personnes'
@@ -222,9 +222,9 @@ eng:
         #>sale_order_lines: 'Lignes de vente'
         #>sale_order_natures: 'Types de vente'
         #>sale_orders: 'Ventes'
-        #>sale_payment_modes: 'Modes de réglement'
-        #>sale_payment_parts: 'Parties de réglement'
-        #>sale_payments: 'Réglements'
+        #>sale_payment_modes: 'Modes de règlement'
+        #>sale_payment_parts: 'Parties de règlement'
+        #>sale_payments: 'Règlements'
         #>sales_conditions: 'Conditions Générales de Vente'
         #>self_bank_accounts: '(((SELF_BANK_ACCOUNTS)))'
         #>self_cashes: 'Comptes bancaires en propre'
@@ -583,7 +583,7 @@ eng:
         #>mode: 'Type de paiement'
         #>mode_id: 'Type de paiement'
         #>number: 'Numéro'
-        #>payments: 'Réglements'
+        #>payments: 'Règlements'
         #>payments_count: 'Nb. règlements'
         updated_at: 'Updated at'
         updater: 'Updater'
@@ -640,9 +640,9 @@ eng:
         #>origin: 'Lieu de la première rencontre'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
-        #>payment_mode: 'Mode de réglement'
-        #>payment_mode_id: 'Mode de réglement'
-        #>payments: 'Réglements'
+        #>payment_mode: 'Mode de règlement'
+        #>payment_mode_id: 'Mode de règlement'
+        #>payments: 'Règlements'
         #>payments_number: 'Nombre de paiements'
         #>photo: 'Photo'
         #>prices: 'Prix'
@@ -656,7 +656,7 @@ eng:
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
         #>sale_orders: 'Ventes'
-        #>sale_payments: 'Réglements'
+        #>sale_payments: 'Règlements'
         #>salt: 'Sel'
         #>siren: 'Code SIREN'
         #>soundex: 'Soundex'
@@ -1448,7 +1448,7 @@ eng:
         #>number: 'Numéro'
         #>parts_amount: 'Montant utilisé'
         #>payee: 'Bénéficiaire'
-        #>payment_parts: 'Parties de réglement'
+        #>payment_parts: 'Parties de règlement'
         #>planned_on: 'Réception prévue le'
         quantity: 'Quantity'
         #>received: 'Reçue'
@@ -1615,7 +1615,7 @@ eng:
         #>payer: 'Payeur'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
-        #>payment_parts: 'Parties de réglement'
+        #>payment_parts: 'Parties de règlement'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
         #>state: 'État'
@@ -1725,7 +1725,7 @@ eng:
         #>mode_id: 'Mode de paiement'
         #>number: 'Numéro'
         #>paid_on: 'Réglé le'
-        #>parts: 'Parties de réglement'
+        #>parts: 'Parties de règlement'
         #>parts_amount: 'Montant utilisé'
         #>payer: 'Payeur'
         #>payer_id: 'Payeur'
@@ -1758,7 +1758,7 @@ eng:
         id: 'ID'
         lock_version: 'Version'
         name: 'Name'
-        #>payments: 'Réglements'
+        #>payments: 'Règlements'
         #>published: 'Publié'
         updated_at: 'Updated at'
         updater: 'Updater'
@@ -1781,8 +1781,8 @@ eng:
         #>invoice: 'Facture'
         #>invoice_id: 'Facture'
         lock_version: 'Version'
-        #>payment: 'Réglement'
-        #>payment_id: 'Réglement'
+        #>payment: 'Règlement'
+        #>payment_id: 'Règlement'
         #>payment_way: 'Moyen de paiement'
         updated_at: 'Updated at'
         updater: 'Updater'
@@ -2130,7 +2130,7 @@ eng:
         lock_version: 'Version'
         #>parts_amount: 'Montant payé'
         #>payer: 'Payeur'
-        #>payment_parts: 'Parties de réglement'
+        #>payment_parts: 'Parties de règlement'
         #>started_on: 'Débuté le'
         #>stopped_on: 'Fini le'
         #>supplier: 'Fournisseur'
@@ -2390,9 +2390,9 @@ eng:
       #>sale_order: 'Vente'
       #>sale_order_line: 'Ligne de vente'
       #>sale_order_nature: 'Type de vente'
-      #>sale_payment: 'Réglement'
-      #>sale_payment_mode: 'Mode de réglement'
-      #>sale_payment_part: 'Partie de réglement'
+      #>sale_payment: 'Règlement'
+      #>sale_payment_mode: 'Mode de règlement'
+      #>sale_payment_part: 'Partie de règlement'
       #>sequence: 'Séquence'
       #>shape: 'Îlot'
       #>shelf: 'Catégorie de produit'
@@ -2470,9 +2470,9 @@ eng:
       #>sale_order: 'Ventes'
       #>sale_order_line: 'Lignes de vente'
       #>sale_order_nature: 'Types de vente'
-      #>sale_payment: 'Réglements'
-      #>sale_payment_mode: 'Modes de réglement'
-      #>sale_payment_part: 'Parties de réglement'
+      #>sale_payment: 'Règlements'
+      #>sale_payment_mode: 'Modes de règlement'
+      #>sale_payment_part: 'Parties de règlement'
       #>sequence: 'Séquences'
       #>shape: 'Îlots'
       shelf: 'Shelves'
