--- a/config/locales/fra/general.yml
+++ b/config/locales/fra/general.yml
@@ -361,7 +361,7 @@ fra:
       label:
         credit: 'Avoir N°{{number}}'
         normal: 'Facture N°{{number}}'
-      to_accountancy: '[{{number}}] {{detail}}'
+      to_accountancy: '[{{resource}} {{number}}] {{detail}}'
     invoice_line:
       no_product: '[Pas de produit]'
     journal:
@@ -448,11 +448,12 @@ fra:
     purchase_order:
       label: '{{supplier}} à {{address}}'
       purchase: 'Achat'
+      to_accountancy: '[{{resource}} {{number}}] {{detail}}'
     purchase_order_line:
       tracking: 'N°Lot : {{serial}}'
     purchase_payment:
       label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} pour {{payee}}'
-      to_accountancy: '[{{number}}] {{detail}}'
+      to_accountancy: '[{{resource}} {{number}}] {{detail}}'
     sale_order:
       label:
         estimate: 'Devis N°{{number}}'
@@ -478,7 +479,7 @@ fra:
       tracking: 'N°Lot : {{serial}}'
     sale_payment:
       label: '{{number}}. {{amount}} ({{usable_amount}} restants) du {{date}} par {{mode}} de {{payer}}'
-      to_accountancy: '[{{number}}] {{detail}}'
+      to_accountancy: '[{{resource}} {{number}}] {{detail}}'
     sequence:
       periods:
         cweek: 'Semaine'
