--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -21,8 +21,8 @@ spa:
         #>lock_version: 'Version'
         name: 'Nombre'
         #>number: 'Numéro'
-        #>payment_modes: 'Modes de réglement'
-        #>payments: 'Réglements'
+        #>payment_modes: 'Modes de règlement'
+        #>payments: 'Règlements'
         #>products: 'Produits'
         #>purchase_order_lines: 'Lignes d''achat'
         #>updated_at: 'Mis à jour le'
@@ -126,7 +126,7 @@ spa:
         #>nature: 'Nature'
         #>nature_label: 'Nature'
         #>number: 'Numéro de compte bancaire'
-        #>payment_modes: 'Modes de réglement'
+        #>payment_modes: 'Modes de règlement'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
         #>updater_id: 'Modificateur'
@@ -165,7 +165,7 @@ spa:
         #>districts: 'Zones administratives'
         #>document_templates: 'Modèles de document'
         #>documents: 'Documents'
-        #>embankable_payments: 'Réglements encaissables'
+        #>embankable_payments: 'Règlements encaissables'
         #>embankments: 'Encaissements'
         #>employees: 'employés'
         #>entities: 'Personnes'
@@ -218,9 +218,9 @@ spa:
         #>sale_order_lines: 'Lignes de vente'
         #>sale_order_natures: 'Types de vente'
         #>sale_orders: 'Ventes'
-        #>sale_payment_modes: 'Modes de réglement'
-        #>sale_payment_parts: 'Parties de réglement'
-        #>sale_payments: 'Réglements'
+        #>sale_payment_modes: 'Modes de règlement'
+        #>sale_payment_parts: 'Parties de règlement'
+        #>sale_payments: 'Règlements'
         #>sales_conditions: 'Conditions Générales de Vente'
         #>self_bank_accounts: '(((SELF_BANK_ACCOUNTS)))'
         #>self_cashes: 'Comptes bancaires en propre'
@@ -578,7 +578,7 @@ spa:
         #>mode: 'Type de paiement'
         #>mode_id: 'Type de paiement'
         #>number: 'Numéro'
-        #>payments: 'Réglements'
+        #>payments: 'Règlements'
         #>payments_count: 'Nb. règlements'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
@@ -635,9 +635,9 @@ spa:
         #>origin: 'Lieu de la première rencontre'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
-        #>payment_mode: 'Mode de réglement'
-        #>payment_mode_id: 'Mode de réglement'
-        #>payments: 'Réglements'
+        #>payment_mode: 'Mode de règlement'
+        #>payment_mode_id: 'Mode de règlement'
+        #>payments: 'Règlements'
         #>payments_number: 'Nombre de paiements'
         #>photo: 'Photo'
         #>prices: 'Prix'
@@ -651,7 +651,7 @@ spa:
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
         #>sale_orders: 'Ventes'
-        #>sale_payments: 'Réglements'
+        #>sale_payments: 'Règlements'
         #>salt: 'Sel'
         #>siren: 'Code SIREN'
         #>soundex: 'Soundex'
@@ -1442,7 +1442,7 @@ spa:
         #>number: 'Numéro'
         #>parts_amount: 'Montant utilisé'
         #>payee: 'Bénéficiaire'
-        #>payment_parts: 'Parties de réglement'
+        #>payment_parts: 'Parties de règlement'
         #>planned_on: 'Réception prévue le'
         #>quantity: 'Quantité'
         #>received: 'Reçue'
@@ -1609,7 +1609,7 @@ spa:
         #>payer: 'Payeur'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
-        #>payment_parts: 'Parties de réglement'
+        #>payment_parts: 'Parties de règlement'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
         #>state: 'État'
@@ -1719,7 +1719,7 @@ spa:
         #>mode_id: 'Mode de paiement'
         #>number: 'Numéro'
         #>paid_on: 'Réglé le'
-        #>parts: 'Parties de réglement'
+        #>parts: 'Parties de règlement'
         #>parts_amount: 'Montant utilisé'
         #>payer: 'Payeur'
         #>payer_id: 'Payeur'
@@ -1752,7 +1752,7 @@ spa:
         #>id: 'ID'
         #>lock_version: 'Version'
         name: 'Nombre'
-        #>payments: 'Réglements'
+        #>payments: 'Règlements'
         #>published: 'Publié'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
@@ -1775,8 +1775,8 @@ spa:
         #>invoice: 'Facture'
         #>invoice_id: 'Facture'
         #>lock_version: 'Version'
-        #>payment: 'Réglement'
-        #>payment_id: 'Réglement'
+        #>payment: 'Règlement'
+        #>payment_id: 'Règlement'
         #>payment_way: 'Moyen de paiement'
         #>updated_at: 'Mis à jour le'
         #>updater: 'Modificateur'
@@ -2124,7 +2124,7 @@ spa:
         #>lock_version: 'Version'
         #>parts_amount: 'Montant payé'
         #>payer: 'Payeur'
-        #>payment_parts: 'Parties de réglement'
+        #>payment_parts: 'Parties de règlement'
         #>started_on: 'Débuté le'
         #>stopped_on: 'Fini le'
         #>supplier: 'Fournisseur'
@@ -2385,9 +2385,9 @@ spa:
       #>sale_order: 'Vente'
       #>sale_order_line: 'Ligne de vente'
       #>sale_order_nature: 'Type de vente'
-      #>sale_payment: 'Réglement'
-      #>sale_payment_mode: 'Mode de réglement'
-      #>sale_payment_part: 'Partie de réglement'
+      #>sale_payment: 'Règlement'
+      #>sale_payment_mode: 'Mode de règlement'
+      #>sale_payment_part: 'Partie de règlement'
       #>sequence: 'Séquence'
       #>shape: 'Îlot'
       #>shelf: 'Catégorie de produit'
@@ -2465,9 +2465,9 @@ spa:
       #>sale_order: 'Ventes'
       #>sale_order_line: 'Lignes de vente'
       #>sale_order_nature: 'Types de vente'
-      #>sale_payment: 'Réglements'
-      #>sale_payment_mode: 'Modes de réglement'
-      #>sale_payment_part: 'Parties de réglement'
+      #>sale_payment: 'Règlements'
+      #>sale_payment_mode: 'Modes de règlement'
+      #>sale_payment_part: 'Parties de règlement'
       #>sequence: 'Séquences'
       #>shape: 'Îlots'
       #>shelf: 'Catégories de produit'
