--- a/config/locales/eng/pack.management.yml
+++ b/config/locales/eng/pack.management.yml
@@ -22,8 +22,8 @@ eng:
       #>inventory: 'Inventaire'
       #>invoice: 'Facture'
       #>invoice_number: 'Numéro de facture'
-      #>last_payment_amount: 'Montant du dernier réglement'
-      #>last_payment_date: 'Date du dernier réglement'
+      #>last_payment_amount: 'Montant du dernier règlement'
+      #>last_payment_date: 'Date du dernier règlement'
       locations:
         #>location_create: 'Ajouter un nouveau lieu de stockage'
       #>mobile: 'Portable'
@@ -32,7 +32,7 @@ eng:
       #>order: 'Commande'
       #>paid_on: 'Réglé le'
       #>parts_amount: 'Montant réglé'
-      #>payment_amount: 'Montant du réglement'
+      #>payment_amount: 'Montant du règlement'
       #>phone: 'Tél.'
       #>price: 'Prix'
       #>price_amount_with_taxes: 'Prix TTC'
@@ -122,9 +122,9 @@ eng:
         #>title: 'Modification du mode de livraison : {{name}}'
       delivery_modes:
         #>title: 'Modes de livraison'
+      _delivery_update:
       delivery_update:
         #>title: 'Modification de la livraison'
-      _delivery_update:
       embankment:
         #>amount: 'Montant total'
         #>check_number: 'Nombre de chèques'
@@ -252,8 +252,8 @@ eng:
       _payment_mode_form:
       payment_mode_update:
       payment_modes:
-        #>purchase_payment_modes: 'Modes de paiement utilisés pour les achats'
-        #>sale_payment_modes: 'Modes de paiement utilisés pour les ventes'
+        #>purchase_payment_modes: 'Modes de règlement utilisés pour les achats'
+        #>sale_payment_modes: 'Modes de règlement utilisés pour les ventes'
         #>title: 'Modes de règlement'
       payments:
       _payments_search:
