--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -151,9 +151,9 @@ fra:
       sale_order: 'Vente'
       sale_order_line: 'Ligne de vente'
       sale_order_nature: 'Type de vente'
-      sale_payment: 'Réglement'
-      sale_payment_mode: 'Mode de réglement'
-      sale_payment_part: 'Partie de réglement'
+      sale_payment: 'Règlement'
+      sale_payment_mode: 'Mode de règlement'
+      sale_payment_part: 'Partie de règlement'
       sequence: 'Séquence'
       shape: 'Îlot'
       shelf: 'Catégorie de produit'
@@ -232,9 +232,9 @@ fra:
       sale_order: 'Ventes'
       sale_order_line: 'Lignes de vente'
       sale_order_nature: 'Types de vente'
-      sale_payment: 'Réglements'
-      sale_payment_mode: 'Modes de réglement'
-      sale_payment_part: 'Parties de réglement'
+      sale_payment: 'Règlements'
+      sale_payment_mode: 'Modes de règlement'
+      sale_payment_part: 'Parties de règlement'
       sequence: 'Séquences'
       shape: 'Îlots'
       shelf: 'Catégories de produit'
@@ -289,8 +289,8 @@ fra:
         lock_version: 'Version'
         name: 'Nom'
         number: 'Numéro'
-        payment_modes: 'Modes de réglement'
-        payments: 'Réglements'
+        payment_modes: 'Modes de règlement'
+        payments: 'Règlements'
         products: 'Produits'
         purchase_order_lines: 'Lignes d''achat'
         updated_at: 'Mis à jour le'
@@ -402,7 +402,7 @@ fra:
         nature: 'Nature'
         nature_label: 'Nature'
         number: 'Numéro de compte bancaire'
-        payment_modes: 'Modes de réglement'
+        payment_modes: 'Modes de règlement'
         updated_at: 'Mis à jour le'
         updater: 'Modificateur'
         updater_id: 'Modificateur'
@@ -443,7 +443,7 @@ fra:
         districts: 'Zones administratives'
         document_templates: 'Modèles de document'
         documents: 'Documents'
-        embankable_payments: 'Réglements encaissables'
+        embankable_payments: 'Règlements encaissables'
         embankments: 'Encaissements'
         employees: 'employés'
         entities: 'Personnes'
@@ -496,9 +496,9 @@ fra:
         sale_order_lines: 'Lignes de vente'
         sale_order_natures: 'Types de vente'
         sale_orders: 'Ventes'
-        sale_payment_modes: 'Modes de réglement'
-        sale_payment_parts: 'Parties de réglement'
-        sale_payments: 'Réglements'
+        sale_payment_modes: 'Modes de règlement'
+        sale_payment_parts: 'Parties de règlement'
+        sale_payments: 'Règlements'
         sales_conditions: 'Conditions Générales de Vente'
         self_bank_accounts: (((SELF_BANK_ACCOUNTS)))
         self_cashes: 'Comptes bancaires en propre'
@@ -884,7 +884,7 @@ fra:
         mode: 'Type de paiement'
         mode_id: 'Type de paiement'
         number: 'Numéro'
-        payments: 'Réglements'
+        payments: 'Règlements'
         payments_count: 'Nb. règlements'
         updated_at: 'Mis à jour le'
         updater: 'Modificateur'
@@ -943,9 +943,9 @@ fra:
         origin: 'Lieu de la première rencontre'
         payment_delay: 'Délai de paiement'
         payment_delay_id: 'Délai de paiement'
-        payment_mode: 'Mode de réglement'
-        payment_mode_id: 'Mode de réglement'
-        payments: 'Réglements' #?
+        payment_mode: 'Mode de règlement'
+        payment_mode_id: 'Mode de règlement'
+        payments: 'Règlements' #?
         payments_number: 'Nombre de paiements' #?
         photo: 'Photo'
         prices: 'Prix'
@@ -959,7 +959,7 @@ fra:
         responsible: 'Responsable'
         responsible_id: 'Responsable'
         sale_orders: 'Ventes'
-        sale_payments: 'Réglements'
+        sale_payments: 'Règlements'
         salt: 'Sel'
         siren: 'Code SIREN'
         soundex: 'Soundex'
@@ -1810,7 +1810,7 @@ fra:
         number: 'Numéro'
         parts_amount: 'Montant utilisé'
         payee: 'Bénéficiaire'
-        payment_parts: 'Parties de réglement'
+        payment_parts: 'Parties de règlement'
         planned_on: 'Réception prévue le'
         quantity: 'Quantité'
         received: 'Reçue' #?
@@ -1989,7 +1989,7 @@ fra:
         payer: 'Payeur'
         payment_delay: 'Délai de paiement'
         payment_delay_id: 'Délai de paiement'
-        payment_parts: 'Parties de réglement'
+        payment_parts: 'Parties de règlement'
         responsible: 'Responsable'
         responsible_id: 'Responsable'
         state: 'État'
@@ -2080,7 +2080,7 @@ fra:
         updater: 'Modificateur'
         updater_id: 'Modificateur'
 
-      # Réglement
+      # Règlement
       sale_payment:
         account_number: 'Numéro de compte'
         accounted_at: 'Comptabilisé(e) le'
@@ -2105,7 +2105,7 @@ fra:
         mode_id: 'Mode de paiement'
         number: 'Numéro'
         paid_on: 'Réglé le'
-        parts: 'Parties de réglement'
+        parts: 'Parties de règlement'
         parts_amount: 'Montant utilisé'
         payer: 'Payeur'
         payer_id: 'Payeur'
@@ -2119,7 +2119,7 @@ fra:
         updater: 'Modificateur'
         updater_id: 'Modificateur'
 
-      # Mode de réglement
+      # Mode de règlement
       sale_payment_mode:
         account: 'Compte d''attente pour les règlements à encaisser'
         account_id: 'Compte d''attente pour les règlements à encaisser'
@@ -2140,7 +2140,7 @@ fra:
         id: 'ID'
         lock_version: 'Version'
         name: 'Nom'
-        payments: 'Réglements'
+        payments: 'Règlements'
         published: 'Publié'
         updated_at: 'Mis à jour le'
         updater: 'Modificateur'
@@ -2149,7 +2149,7 @@ fra:
         with_commission: 'Inclure une commission'
         with_embankment: 'Utiliser les remises en banque'
 
-      # Partie de réglement
+      # Partie de règlement
       sale_payment_part:
         amount: 'Montant attribué à la vente'
         company: 'Société'
@@ -2165,8 +2165,8 @@ fra:
         invoice: 'Facture' #?
         invoice_id: 'Facture' #?
         lock_version: 'Version'
-        payment: 'Réglement'
-        payment_id: 'Réglement'
+        payment: 'Règlement'
+        payment_id: 'Règlement'
         payment_way: 'Moyen de paiement'
         updated_at: 'Mis à jour le'
         updater: 'Modificateur'
@@ -2542,7 +2542,7 @@ fra:
         lock_version: 'Version'
         parts_amount: 'Montant payé'
         payer: 'Payeur'
-        payment_parts: 'Parties de réglement'
+        payment_parts: 'Parties de règlement'
         started_on: 'Débuté le'
         stopped_on: 'Fini le'
         supplier: 'Fournisseur'
