--- a/config/locales/fra/pack.management.yml
+++ b/config/locales/fra/pack.management.yml
@@ -22,8 +22,8 @@ fra:
       inventory: 'Inventaire'
       invoice: 'Facture'
       invoice_number: 'Numéro de facture'
-      last_payment_amount: 'Montant du dernier réglement'
-      last_payment_date: 'Date du dernier réglement'
+      last_payment_amount: 'Montant du dernier règlement'
+      last_payment_date: 'Date du dernier règlement'
       locations:
         location_create: 'Ajouter un nouveau lieu de stockage'
       mobile: 'Portable'
@@ -32,7 +32,7 @@ fra:
       order: 'Commande'
       paid_on: 'Réglé le'
       parts_amount: 'Montant réglé'
-      payment_amount: 'Montant du réglement'
+      payment_amount: 'Montant du règlement'
       phone: 'Tél.'
       price: 'Prix'
       price_amount_with_taxes: 'Prix TTC'
@@ -248,8 +248,8 @@ fra:
         reservoirs_create: 'Ajouter un réservoir'
         title: 'Lieux de stockage'
       payment_modes:
-        purchase_payment_modes: 'Modes de paiement utilisés pour les achats'
-        sale_payment_modes: 'Modes de paiement utilisés pour les ventes'
+        purchase_payment_modes: 'Modes de règlement utilisés pour les achats'
+        sale_payment_modes: 'Modes de règlement utilisés pour les ventes'
         title: 'Modes de règlement'
         #>sale_payment_mode_create: # Potentially missing translation
         #>purchase_payment_mode_create: # Potentially missing translation
