--- a/config/locales/jpn/activerecord.yml
+++ b/config/locales/jpn/activerecord.yml
@@ -23,8 +23,8 @@ jpn:
         number: '番号'
         parent: '親戚' #!
         parent_id: '親戚' #!
-        #>payment_modes: 'Modes de réglement'
-        #>payments: 'Réglements'
+        #>payment_modes: 'Modes de règlement'
+        #>payments: 'Règlements'
         #>products: 'Produits'
         #>purchase_order_lines: 'Lignes d''achat'
         #>updated_at: 'Mis à jour le'
@@ -128,7 +128,7 @@ jpn:
         #>nature: 'Nature'
         #>nature_label: 'Nature'
         #>number: 'Numéro de compte bancaire'
-        #>payment_modes: 'Modes de réglement'
+        #>payment_modes: 'Modes de règlement'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
         updater_id: '修正の人'
@@ -167,7 +167,7 @@ jpn:
         #>districts: 'Zones administratives'
         #>document_templates: 'Modèles de document'
         #>documents: 'Documents'
-        #>embankable_payments: 'Réglements encaissables'
+        #>embankable_payments: 'Règlements encaissables'
         #>embankments: 'Encaissements'
         #>employees: 'employés'
         #>entities: 'Personnes'
@@ -220,9 +220,9 @@ jpn:
         #>sale_order_lines: 'Lignes de vente'
         #>sale_order_natures: 'Types de vente'
         #>sale_orders: 'Ventes'
-        #>sale_payment_modes: 'Modes de réglement'
-        #>sale_payment_parts: 'Parties de réglement'
-        #>sale_payments: 'Réglements'
+        #>sale_payment_modes: 'Modes de règlement'
+        #>sale_payment_parts: 'Parties de règlement'
+        #>sale_payments: 'Règlements'
         #>sales_conditions: 'Conditions Générales de Vente'
         #>self_bank_accounts: '(((SELF_BANK_ACCOUNTS)))'
         #>self_cashes: 'Comptes bancaires en propre'
@@ -580,7 +580,7 @@ jpn:
         #>mode: 'Type de paiement'
         #>mode_id: 'Type de paiement'
         number: '番号'
-        #>payments: 'Réglements'
+        #>payments: 'Règlements'
         #>payments_count: 'Nb. règlements'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
@@ -637,9 +637,9 @@ jpn:
         #>origin: 'Lieu de la première rencontre'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
-        #>payment_mode: 'Mode de réglement'
-        #>payment_mode_id: 'Mode de réglement'
-        #>payments: 'Réglements'
+        #>payment_mode: 'Mode de règlement'
+        #>payment_mode_id: 'Mode de règlement'
+        #>payments: 'Règlements'
         #>payments_number: 'Nombre de paiements'
         #>photo: 'Photo'
         #>prices: 'Prix'
@@ -653,7 +653,7 @@ jpn:
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
         #>sale_orders: 'Ventes'
-        #>sale_payments: 'Réglements'
+        #>sale_payments: 'Règlements'
         #>salt: 'Sel'
         #>siren: 'Code SIREN'
         #>soundex: 'Soundex'
@@ -1444,7 +1444,7 @@ jpn:
         number: '番号'
         #>parts_amount: 'Montant utilisé'
         #>payee: 'Bénéficiaire'
-        #>payment_parts: 'Parties de réglement'
+        #>payment_parts: 'Parties de règlement'
         #>planned_on: 'Réception prévue le'
         #>quantity: 'Quantité'
         #>received: 'Reçue'
@@ -1611,7 +1611,7 @@ jpn:
         #>payer: 'Payeur'
         #>payment_delay: 'Délai de paiement'
         #>payment_delay_id: 'Délai de paiement'
-        #>payment_parts: 'Parties de réglement'
+        #>payment_parts: 'Parties de règlement'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
         #>state: 'État'
@@ -1721,7 +1721,7 @@ jpn:
         #>mode_id: 'Mode de paiement'
         number: '番号'
         #>paid_on: 'Réglé le'
-        #>parts: 'Parties de réglement'
+        #>parts: 'Parties de règlement'
         #>parts_amount: 'Montant utilisé'
         #>payer: 'Payeur'
         #>payer_id: 'Payeur'
@@ -1754,7 +1754,7 @@ jpn:
         id: '唯一の番号'
         lock_version: '修正の番号'
         name: '名前'
-        #>payments: 'Réglements'
+        #>payments: 'Règlements'
         #>published: 'Publié'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
@@ -1777,8 +1777,8 @@ jpn:
         #>invoice: 'Facture'
         #>invoice_id: 'Facture'
         lock_version: '修正の番号'
-        #>payment: 'Réglement'
-        #>payment_id: 'Réglement'
+        #>payment: 'Règlement'
+        #>payment_id: 'Règlement'
         #>payment_way: 'Moyen de paiement'
         #>updated_at: 'Mis à jour le'
         updater: '修正の人'
@@ -2126,7 +2126,7 @@ jpn:
         lock_version: '修正の番号'
         #>parts_amount: 'Montant payé'
         #>payer: 'Payeur'
-        #>payment_parts: 'Parties de réglement'
+        #>payment_parts: 'Parties de règlement'
         #>started_on: 'Débuté le'
         #>stopped_on: 'Fini le'
         #>supplier: 'Fournisseur'
@@ -2387,9 +2387,9 @@ jpn:
       #>sale_order: 'Vente'
       #>sale_order_line: 'Ligne de vente'
       #>sale_order_nature: 'Type de vente'
-      #>sale_payment: 'Réglement'
-      #>sale_payment_mode: 'Mode de réglement'
-      #>sale_payment_part: 'Partie de réglement'
+      #>sale_payment: 'Règlement'
+      #>sale_payment_mode: 'Mode de règlement'
+      #>sale_payment_part: 'Partie de règlement'
       #>sequence: 'Séquence'
       #>shape: 'Îlot'
       #>shelf: 'Catégorie de produit'
@@ -2467,9 +2467,9 @@ jpn:
       #>sale_order: 'Ventes'
       #>sale_order_line: 'Lignes de vente'
       #>sale_order_nature: 'Types de vente'
-      #>sale_payment: 'Réglements'
-      #>sale_payment_mode: 'Modes de réglement'
-      #>sale_payment_part: 'Parties de réglement'
+      #>sale_payment: 'Règlements'
+      #>sale_payment_mode: 'Modes de règlement'
+      #>sale_payment_part: 'Parties de règlement'
       #>sequence: 'Séquences'
       #>shape: 'Îlots'
       #>shelf: 'Catégories de produit'
